--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
               margin: 0;
               padding: 0;
           }
-          html,body,#app{
+          html,body,#root{
               width: 100%;
               height: 100%;
               position: relative;
@@ -16,6 +16,6 @@
       </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
 </html>
